--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ header {
   background-color: white;
   display: flex;
   height: 120px;
+  width: auto;
 }
 .logo {
   display: flex;
@@ -95,32 +96,20 @@ footer p {
 
 .home {
   display: flex;
-  max-height: 800px;
+  max-height: 900px;
   margin-right: 10%;
 }
 #home {
   text-align: left;
-  width: 60%;
+  width: 50%;
   box-sizing: border-box;
-  margin-left: 10%;
-  font-family:Georgia, 'Times New Roman', Times, serif;
-}
-#team {
-  text-align: left;
-  width: 60%;
-  box-sizing: border-box;
-  margin-left: 10%;
-  font-family:Georgia, 'Times New Roman', Times, serif;
-}
-#contact {
-  text-align: left;
-  width: 60%;
-  box-sizing: border-box;
-  margin-left: 10%;
+  margin-left: 5%;
   font-family:Georgia, 'Times New Roman', Times, serif;
 }
 #img {
-  width: 100%;
+  height: 400px;
+  width: auto;
+  margin-left: 9%;
 }
 
 img {
@@ -129,8 +118,8 @@ img {
   height: auto;
   display: block;
 }
-.animate-charcter
-{
+.animate-charcter{
+
   margin-left: 10%;
    text-transform: uppercase;
   background-image: linear-gradient(
@@ -148,7 +137,7 @@ img {
   -webkit-text-fill-color: transparent;
   animation: textclip 2s linear infinite;
   display: inline-block;
-      font-size: 100px;
+      font-size: 70px;
 }
 
 @keyframes textclip {
