--- a/style.css
+++ b/style.css
@@ -96,19 +96,19 @@ footer p {
 
 .home {
   display: flex;
+  flex-wrap: wrap;
   max-height: 900px;
-  margin-right: 10%;
 }
 #home {
-  text-align: left;
-  width: 50%;
+  text-align:justify;
+  width: 60%;
   box-sizing: border-box;
-  margin-left: 5%;
+  margin-left: 10%;
   font-family:Georgia, 'Times New Roman', Times, serif;
 }
 #img {
   height: 400px;
-  width: auto;
+  width: 20%;
   margin-left: 9%;
 }
 
