--- a/style.css
+++ b/style.css
@@ -181,3 +181,79 @@ footer p {
   text-align: center;
 }
 
+#button {
+  color: inherit;
+  text-decoration: inherit;
+}
+/* CSS */
+.button-85 {
+  
+  display: flex;
+  margin: auto;
+  padding: 1.8em 6em;
+  border: 2px solid #111; /* Adjusted border width and color */
+  outline: none;
+  color: rgb(255, 255, 255);
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 20px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-85:before {
+  content: "";
+  background: linear-gradient(
+    90deg,
+    #000000,
+    #ffae00,
+    #ffbb00,
+    #000000,
+    #000000,
+    #000000
+  );
+  position:absolute;
+  top: -6px; /* Adjusted to account for increased border */
+  left: -6px; /* Adjusted to account for increased border */
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  width: calc(100% + 12px); /* Adjusted to account for increased border */
+  height: calc(100% + 12px); /* Adjusted to account for increased border */
+  animation: glowing-button-85 20s linear infinite;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 20px;
+}
+
+@keyframes glowing-button-85 {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.button-85:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #222;
+  left: 0;
+  top: 0;
+  border-radius: 20px;
+}
+
+.more {
+  list-style: none;
+  text-decoration: none;
+}
