--- a/stylec.css
+++ b/stylec.css
@@ -104,7 +104,7 @@ body {
         line-height: 24px;
         letter-spacing: -0.01em;
   
-        width: 400px;
+        width: 65%;
   
         /* NORMAL */
         --fc-border-color: #000000;
